Bug 787502 - post: Remove old and busted BaseResourceDelegate.